# mae_frontend

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  domain_analysis.py  env-example.txt  market_research.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: bandit.yml
src/mae_frontend/: app.py
