[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mae-frontend"
version = "0.1.0"
description = "Streamlit frontend for the MAE Brand Namer API"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "MAE Brand Namer Team", email = "info@maebrandnamer.com"},
]
keywords = ["brand", "naming", "ai", "streamlit", "frontend"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "streamlit>=1.31.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pandas>=2.2.0",
    "altair>=5.2.0",
    "langchain-core>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.3.0,<23.0.0",
    "isort>=5.12.0,<6.0.0",
    "ruff>=0.2.1,<0.3.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/mae_frontend"
Documentation = "https://github.com/yourusername/mae_frontend#readme"
Repository = "https://github.com/yourusername/mae_frontend.git"
Issues = "https://github.com/yourusername/mae_frontend/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mae_frontend"]

[tool.black]
line-length = 100
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "B", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=mae_frontend"
testpaths = ["tests"] 